--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ yarn.lock
 node_modules/.yarn-integrity
 devbox.lock
 devbox.json
+Suwayomi-WebUI/.yarnrc.yml
+Suwayomi-WebUI/package.json
+Suwayomi-WebUI/package.json
+Suwayomi-WebUI/yarn.lock
