--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Suwayomi-WebUI/.yarnrc.yml
 Suwayomi-WebUI/package.json
 Suwayomi-WebUI/package.json
 Suwayomi-WebUI/yarn.lock
+Suwayomi-WebUI/package.json
+Suwayomi-WebUI/yarn.lock
