--- a/Suwayomi-Server/.github/workflows/winget.yml
+++ b/Suwayomi-Server/.github/workflows/winget.yml
@@ -1,9 +1,11 @@
 name: Publish to WinGet
 on:
-  workflow_run:
-    workflows: ["CI Publish"]
-    types:
-      - completed
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Version
+        required: false
+
 jobs:
   publish:
     runs-on: windows-latest # action can only be run on windows
@@ -13,3 +15,5 @@ jobs:
           identifier: Suwayomi.Tachidesk-Server
           installers-regex: '.*x64.msi$'
           token: ${{ secrets.WINGET_PUBLISH_PAT }}
+          version: ${{ inputs.version || github.ref_name }}
+          release-tag: ${{ inputs.version || github.ref_name  }}
