--- a/Suwayomi-Server/gradle/libs.versions.toml
+++ b/Suwayomi-Server/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-kotlin = "2.1.21"
+kotlin = "2.2.0"
 coroutines = "1.10.2"
-serialization = "1.8.1"
-okhttp = "5.0.0-alpha.16" # Major version is locked by Tachiyomi extensions
+serialization = "1.9.0"
+okhttp = "5.0.0" # Major version is locked by Tachiyomi extensions
 javalin = "6.7.0"
 jackson = "2.18.3" # jackson version locked by javalin, ref: `io.javalin.core.util.OptionalDependency`
 exposed = "0.61.0"
@@ -14,7 +14,7 @@ graphqlkotlin = "8.8.1"
 xmlserialization = "0.91.1"
 ktlint = "1.6.0"
 koin = "4.1.0"
-moko = "0.24.5"
+moko = "0.25.0"
 
 [libraries]
 # Kotlin
@@ -44,7 +44,7 @@ okhttp-core = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 okhttp-dnsoverhttps = { module = "com.squareup.okhttp3:okhttp-dnsoverhttps", version.ref = "okhttp" }
 okhttp-brotli = { module = "com.squareup.okhttp3:okhttp-brotli", version.ref = "okhttp" }
-okio = "com.squareup.okio:okio:3.13.0"
+okio = "com.squareup.okio:okio:3.15.0"
 
 # Javalin api
 javalin-core = { module = "io.javalin:javalin", version.ref = "javalin" }
@@ -79,7 +79,7 @@ systemtray-desktop = "com.dorkbox:Desktop:1.1" # version locked by SystemTray
 # dependencies of Tachiyomi extensions
 injekt = "com.github.null2264:injekt-koin:ee267b2e27"
 rxjava = "io.reactivex:rxjava:1.3.8"
-jsoup = "org.jsoup:jsoup:1.20.1"
+jsoup = "org.jsoup:jsoup:1.21.1"
 
 # Config
 config = "com.typesafe:config:1.4.3"
@@ -98,7 +98,7 @@ dex2jar-tools = { module = "com.github.ThexXTURBOXx.dex2jar:dex-tools", version.
 
 # APK
 apk-parser = "net.dongliu:apk-parser:2.6.10"
-apksig = "com.android.tools.build:apksig:8.10.1"
+apksig = "com.android.tools.build:apksig:8.11.0"
 
 # Xml
 xmlpull = "xmlpull:xmlpull:1.1.3.4a"
@@ -136,7 +136,7 @@ twelvemonkeys-imageio-metadata = { module = "com.twelvemonkeys.imageio:imageio-m
 twelvemonkeys-imageio-jpeg = { module = "com.twelvemonkeys.imageio:imageio-jpeg", version.ref = "twelvemonkeys" }
 twelvemonkeys-imageio-webp = { module = "com.twelvemonkeys.imageio:imageio-webp", version.ref = "twelvemonkeys" }
 
-sejda-webp = "com.github.usefulness:webp-imageio:0.10.0"
+sejda-webp = "com.github.usefulness:webp-imageio:0.10.1"
 
 # Testing
 mockk = "io.mockk:mockk:1.14.4"
@@ -166,7 +166,7 @@ kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref 
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version = "12.3.0"}
 
 # Build config
-buildconfig = { id = "com.github.gmazzo.buildconfig", version = "5.6.6"}
+buildconfig = { id = "com.github.gmazzo.buildconfig", version = "5.6.7"}
 
 # Download
 download = { id = "de.undercouch.download", version = "5.6.0"}
